syntax = "proto3";

option java_package = "com.zjj.proto";
option java_outer_classname = "CtrlMessage";

message MultiMessage {
  enum MultiType {
    INET_COMMAND = 0;
    REQ_ADDR = 1;
    SYN = 2;
    SYN_ACK = 3;
    ACK = 4;
    REQ_REDIRECT = 5;
    CTRL_INFO = 6;
    SERVER_ACK = 7;
    PSP_MESSAGE = 8;
  }
  MultiType multiType = 1;
  oneof MultiBody {
    InetCommand inetCommand = 2;
    ReqAddr reqAddr = 3;
    Syn syn = 4;
    SynAck synAck = 5;
    Ack ack = 6;
    ReqRedirect reqRedirect = 7;
    CtrlInfo ctrlInfo = 8;
    ServerAck serverAck = 9;
    P2PMessage p2PMessage = 10;
  }
}

enum InetType {
  PRIVATE = 0;
  PUBLIC = 1;
}

message InetCommand {
  string clientId = 1;
  string host = 2;
  int32 port = 3;
  InetType inetType = 4;
}

message ReqAddr {
  string id = 1;
}

message Syn {
  string from = 1;
  string to = 2;
}

message SynAck {
  string from = 1;
  string to = 2;
}

message Ack {
  string from = 1;
  string to = 2;
}

message ReqRedirect {
  string from = 1;
  string to = 2;
  InetType inetType = 3;
}

message CtrlInfo {
  enum CtrlType {
    REGISTER = 0;
    REQ_ADDR = 1;
    UPDATE_ADDR = 2;
    NOTIFY_ACK = 3;
  }
  CtrlType type = 1;
  string localId = 2;
  string oppositeId = 3;
  string message = 4;
}

message ServerAck {
  enum AckType {
    OK = 0;
    ACK_ADDR = 1;
    NOTIFY_SEND = 2;
  }
  AckType type = 1;
  string message = 2;
}

message P2PMessage {
  enum MsgType {
    SAVE_ADDR = 0;
    HEART_BEAT = 1;
    CHAT = 2;
  }
  MsgType type = 1;
  string message = 2;
}

//protoc -I=src/main/resources/proto --java_out=src/main/java ctrlMessage.proto
